Add repair-info (#338)
Closes #327
